# component-adaptive-card

./: 1  Cargo.toml  Makefile  README.md  component.manifest.json  dev.md  test-asset.sh  test.sh
.codex/: ACT-PR-01.md  ACT-PR-02.md  ACT-PR-03.md  ACT-PR-04.md  ACT-PR-05.md  ACTCI-PR-01.md  ACTCI-PR-02.md
.github/workflows/: adaptive-card-nightly-chaos.yml  adaptive-card-pr-gate.yml  ci.yml
artifacts/matrix-pairwise/case_0014/: scenario.meta.json
artifacts/matrix-pairwise/case_0014/artifacts/: case_0014.json  step-001.meta.json
artifacts/readme-gtests/01_quickstart_inline/: scenario.meta.json
artifacts/readme-gtests/01_quickstart_inline/artifacts/: step-001.meta.json  step-002.meta.json
artifacts/readme-gtests/02_catalog_render_validate/: scenario.meta.json
assets/: readme-card.json
ci/: local_check.sh  run_ci_tests.sh
flows/: custom.ygtc  default.ygtc
schemas/: adaptive-card.invocation.v1.schema.json  component.schema.json
schemas/io/: input.schema.json  output.schema.json
src/: error.rs  interaction.rs  lib.rs  model.rs  render.rs  state_store.rs  trace.rs  validation.rs
tests/: conformance.rs  custom_flow_template.rs
tests/fixtures/: matrix_spec.yaml
tests/gtests/README/: 01_quickstart_inline.gtest  02_catalog_render_validate.gtest  03_interaction_submit.gtest
tests/gtests/matrix/: README.md
tests/gtests/negative/assets/: 01_missing_asset_path.gtest  04_bad_json.gtest  (+2 more)
tests/gtests/trace/: 01_asset_trace.gtest  02_bindings_trace.gtest  03_state_trace.gtest  04_interaction_trace.gtest
tests/tools/: gen_matrix  run_matrix_smoke.sh
(+20 files in other folders)
