[package]
name = "component-adaptive-card"
version = "0.1.12"
edition = "2024"
license = "MIT"
rust-version = "1.90"
description = "Greentic component component-adaptive-card"
repository = "https://github.com/component-adaptive-card"
authors = ["maarten"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
once_cell = "1.19"
greentic-types = { version = "0.4" }
handlebars = "6"
jsonschema = { version = "0.41", default-features = false }
blake3 = "1"

[features]
default = ["state-store"]
state-store = ["greentic-interfaces-guest/state-store"]

[dev-dependencies]
serde_json = "1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
greentic-interfaces-guest = { version = "0.4", default-features = false, features = ["component-node"] }
